--- a/frontend/src/pages/Login/styles.css
+++ b/frontend/src/pages/Login/styles.css
@@ -10,7 +10,7 @@
     /*align vertically*/
     align-items: center;
     /*align horizontally*/
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .login-container section.form{
@@ -28,21 +28,3 @@
     margin-bottom: 32px;  
 }
 
-.login-container section.form form a{
-    display: flex;
-    align-items: center;
-    margin-top: 40px;
-    color: #41414d;
-    font-size: 18px;
-    text-decoration: none;
-    font-weight: 500;
-    transition: opacity 0.2s;
-}
-
-.login-container section.form form a svg{
-    margin-right: 8px;
-}
-
-.login-container section.form form a:hover{
-    opacity: 0.8;
-}
